// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Example function generation should render example function for model 1`] = `
"class Test {
  stringProp;
  numberProp;
  objectProp;
  additionalProperties;
  sTestPatternProperties;

  constructor(input) {
    this.stringProp = input.stringProp;
    if (input.hasOwnProperty('numberProp')) {
      this.numberProp = input.numberProp;
    }
    if (input.hasOwnProperty('objectProp')) {
      this.objectProp = input.objectProp;
    }
  }

  get stringProp() { return this.stringProp; }
  set stringProp(stringProp) { this.stringProp = stringProp; }

  get numberProp() { return this.numberProp; }
  set numberProp(numberProp) { this.numberProp = numberProp; }

  get objectProp() { return this.objectProp; }
  set objectProp(objectProp) { this.objectProp = objectProp; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }

  get sTestPatternProperties() { return this.sTestPatternProperties; }
  set sTestPatternProperties(sTestPatternProperties) { this.sTestPatternProperties = sTestPatternProperties; }

  example(){
    const instance = new Test({});
    instance.stringProp = \\"string\\";
    instance.numberProp = 0;
    instance.objectProp = NestedTest.example();
    return instance;
  }
}"
`;

exports[`Example function generation should render example function for model 2`] = `
"class NestedTest {
  stringProp;
  additionalProperties;

  constructor(input) {
    if (input.hasOwnProperty('stringProp')) {
      this.stringProp = input.stringProp;
    }
  }

  get stringProp() { return this.stringProp; }
  set stringProp(stringProp) { this.stringProp = stringProp; }

  get additionalProperties() { return this.additionalProperties; }
  set additionalProperties(additionalProperties) { this.additionalProperties = additionalProperties; }

  example(){
    const instance = new NestedTest({});
    instance.stringProp = \\"string\\";
    return instance;
  }
}"
`;
